<resources>
    <string name="app_name">SafeCold</string>
    <string name="ok">OK</string>
    <string name="hint_scan">Scan</string>
    <string name="hint_find">Align QR Code</string>
    <string name="hint_camera_framework_bug">Sorry, there is a problem with the camera and the app does not have permission to access the camera.</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">OK</string>
    <string name="tip">Prompt</string>
    <string name="complete">Complete</string>
    <string name="check_all">Select All</string>
    <string name="all_dont_check">Not Selected</string>
    <string name="not_data">No More Data...</string>
    <string name="loadmore_loading">Loading</string>
    <string name="loadmore_footer_end">This is the bottom</string>
    <string name="loadmore_network_error">Network error, click to Retry</string>
    <string name="tab_asset">Assets</string>
    <string name="tab_address">Address Book</string>
    <string name="tab_mine">My</string>
    <string name="wallet_manage">Wallet Management</string>
    <string name="send_record">Send Record</string>
    <string name="public_key_book">Public Key Book</string>
    <string name="many_sign_deal">Multi-signature Transaction</string>
    <string name="message_sign">Message Signature</string>
    <string name="sign_message">Signed Message</string>
    <string name="verify_message_sign">Verify Message Signature</string>
    <string name="setting">Settings</string>
    <string name="safe_upgrade">Secure Upgrade</string>
    <string name="help">Help</string>
    <string name="sign">Signature</string>
    <string name="security_setting">Security Settings</string>
    <string name="system_setting">System Settings</string>
    <string name="restore_factory">Restore Factory Settings</string>
    <string name="restore_factory_warn">Resetting the factory settings will erase all data in your wallet, please make sure you have backed up your wallet. Confirm reset?</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="user_agreement">User Agreement</string>
    <string name="safegem_modify">Hot End Bluetooth</string>
    <string name="fingerprint_setting">Fingerprint Settings</string>
    <string name="gesture_setting">Gesture Settings</string>
    <string name="input_message">Message To Be Signed</string>
    <string name="original_message">Original Message</string>
    <string name="input_original_message">Please enter the original message</string>
    <string name="signed_message">Signed Message</string>
    <string name="input_signed_message">Please enter the signed message</string>
    <string name="verify">Verify</string>
    <string name="verify_success">Message verification success</string>
    <string name="verify_fail">Message verification failed</string>
    <string name="select_currency">Select Currency</string>
    <string name="input_keyword_hint">Enter Keyword</string>
    <string name="all">All</string>
    <string name="input_seed_word">Please enter the seed password of your backup in order.</string>
    <string name="show_seed_qr_code">Display seed QR code</string>
    <string name="check_seed">Verify Seed Password</string>
    <string name="check_seed_error">Seed password verification failed. Please try again.</string>
    <string name="change_password">Modify Password</string>
    <string name="my_public_key">My Public Key</string>
    <string name="backups_seed">Backup Seed Password</string>
    <string name="seed_password">Seed Password</string>
    <string name="wallet_info">Bind Wallet</string>
    <string name="pay_to">Pay To: %s</string>
    <string name="hint_address_remark">Address Remark</string>
    <string name="payee_address">Payee Wallet Address</string>
    <string name="select_payee_address">Please select the payee wallet address.</string>
    <string name="money">Amount</string>
    <string name="input_money">Please enter the transfer amount.</string>
    <string name="input_money_limit">Transfer amount must be greater than %s</string>
    <string name="not_sufficient_funds_title">Insufficient Balance</string>
    <string name="not_sufficient_funds">The current %s balance is insufficient to pay for the transaction. If the balance is not synced, try syncing the balance from the hot wallet first.</string>
    <string name="not_sufficient_funds2">Exceeds your %s balance after accounting for transaction fees</string>
    <string name="transaction_size_failed">Transaction construction failed with transaction size exceeding the upper limit.</string>
    <string name="amount_is_too_small">The amount is too small to be paid.</string>
    <string name="unknown_abnormal">Unknown Error</string>
    <string name="remark">Remarks</string>
    <string name="next_step">Next</string>
    <string name="last_step">Last</string>
    <string name="refresh_balance">Update Balance</string>
    <string name="sync">Sync</string>
    <string name="synchronous_balance">Balance has been synced</string>
    <string name="synchronous_balance_err">Not This Wallet\'s Balance Information</string>
    <string name="view_details">View Details ></string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="step_1">1</string>
    <string name="step_2">2</string>
    <string name="receive_amount">Receiving Amount</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="submit_password">Confirm New Password</string>
    <string name="remind_forget_password">Forgot password, you can import the mnemonic words to reset the password,</string>
    <string name="forget_password">Forgot password</string>
    <string name="forget_password_link">Forgot Your Password?</string>
    <string name="hint_forget_password">Unfortunately, forgetting the password means that the wallet is lost. Clicking on the confirmation will clear wallet data. You can resynchronize the wallet data by restoring the wallet, or you can recreate a new wallet.</string>
    <string name="import_seed"><u>Immediately import</u></string>
    <string name="old_password_error">The old password is incorrect, please check again.</string>
    <string name="reset_success">The password was successfully modified.</string>
    <string name="hint_old_password">Please enter the old password.</string>
    <string name="hint_new_password">Please enter a new password.</string>
    <string name="hint_submit_password">Please confirm the new password.</string>
    <string name="hint_new_password_error">The new password is inconsistent.</string>
    <string name="hint_password_error">The old and new passwords cannot be the same.</string>
    <string name="hint_input_password">Please enter your wallet password.</string>
    <string name="submit_input_password">Please enter the confirmation wallet password.</string>
    <string name="input_password_err">The wallet password is inconsistent.</string>
    <string name="input_password_length_min">The password must be at least 12 characters long.</string>
    <string name="input_password_format_error">The password format is incorrect.</string>
    <string name="input_password_contain">The password must contain the letter case and number.</string>
    <string name="password_error">The password is incorrect, please check.</string>
    <string name="address_err">Invalid address, please check.</string>
    <string name="wallet_scan">Scan Code</string>
    <string name="wallet_receive">Receive</string>
    <string name="wallet_transfer">Transfer</string>
    <string name="hide_zero">Hide 0 Balance</string>
    <string name="search">Search</string>
    <string name="scan_qr_code">Scan Hot Wallet QR Code</string>
    <string name="my_address">My Address</string>
    <string name="my_address_title">My Address -%s</string>
    <string name="my_address_select">Select Address -%s</string>
    <string name="contact_address">Contact Address</string>
    <string name="currency_address_count">%d Addresses</string>
    <string name="no_alias">No Comments</string>
    <string name="monitor">Monitor</string>
    <string name="priv_key">Private Key</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="add_receiver">Add Payee</string>
    <string name="select_fee">Select Transaction Fee</string>
    <string name="add_address">Add Address</string>
    <string name="edit_alias">Edit Notes</string>
    <string name="wallet_address">Wallet Address</string>
    <string name="exist_address">This address has been saved and cannot be added repeatedly.</string>
    <string name="exist_address2">This address is the wallet address and cannot be added.</string>
    <string name="hint_select_currency">Please select the currency first.</string>
    <string name="input_address">Please enter the wallet address.</string>
    <string name="select_address">Please select a currency.</string>
    <string name="please_add_receiver">Please add payee</string>
    <string name="sign_address">Signature Address</string>
    <string name="input_sign_address">Please enter the signature address</string>
    <string name="contact_address_detail">Contact Address -%s</string>
    <string name="resend">Send Again</string>
    <string name="delete_contact">Delete Contacts</string>
    <string name="submit_delete_contact">Confirm deletion of the contact.</string>
    <string name="cant_delete">There is an unspent %s under this address and cannot be deleted.</string>
    <string name="input_password">Enter the wallet password</string>
    <string name="password">Password</string>
    <string name="hint_password">Please enter the wallet password</string>
    <string name="hint_password2">Please confirm the wallet password</string>
    <string name="max_hdaddress_count">You already have %d addresses and cannot continue adding.</string>
    <string name="select_pay_address">Payment Address: %s</string>
    <string name="export">Export</string>
    <string name="export_qr_code">Export QR Code</string>
    <string name="select_export_currency">Please select the monitoring currency</string>
    <string name="previous_page">Previous Page</string>
    <string name="gesture_error_hint">After 5 failures, you need to enter a password to unlock.</string>
    <string name="gesture_error_count">The password is incorrect, you can try %d more times.</string>
    <string name="password_unlock">Password Unlock</string>
    <string name="chinese">简体中文</string>
    <string name="chinese_tw">繁体中文</string>
    <string name="english">English</string>
    <string name="restore_wallet">Restore Wallet</string>
    <string name="create_wallet">Create New Wallet</string>
    <string name="agree_hint">I have read and accepted the</string>
    <string name="agree_content"><u>UPA</u></string>
    <string name="wallet_name_title">Wallet Name</string>
    <string name="wallet_name_hint">Please set a name for your wallet, in either Chinese or English, no longer than 12 characters. This cannot be changed after setting.</string>
    <string name="transaction_fee">Transaction Fee</string>
    <string name="transaction_fee_unit">%s/KB</string>
    <string name="min_transaction_fee">Minimum Rate: %s %s/KB</string>
    <string name="default_transaction_fee"><u>Default</u></string>
    <string name="save">Save</string>
    <string name="eth_gas_price">Custom Gas Price</string>
    <string name="eth_gas_limit">Custom Gas Limit</string>
    <string name="pay_amount">Amount:</string>
    <string name="add_wallet_hint">If you don\'t have a wallet account, please create a new wallet. If you already have a wallet, please restore your wallet.</string>
    <string name="password_rule">Upper/lower case letters + number combination, and the length is 12 to 32 characters.</string>
    <string name="max_fee">Max Transaction Fee:%s %s</string>
</resources>