<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dimen_20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:text="@string/transaction_fee"
        android:textColor="@color/colorPrimary" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_fee"
            android:inputType="numberDecimal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_color"
            android:background="@null" />

        <TextView
            android:id="@+id/tv_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_fee_unit" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/dimen_4dp"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_6dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_min_fee"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/min_transaction_fee"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/tv_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_4dp"
            android:text="@string/default_transaction_fee"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_save"
        style="@style/public_circle_button_style"
        android:layout_width="@dimen/dimen_150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_54dp"
        android:text="@string/save" />

</LinearLayout>