<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_wallet_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@color/white"
        android:hint="@string/wallet_name_title"
        android:paddingLeft="@dimen/dimen_12dp"
        android:paddingRight="@dimen/dimen_12dp"
        android:singleLine="true"
        android:textSize="@dimen/font_14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:layout_weight="1"
        android:lineSpacingExtra="@dimen/dimen_4dp"
        android:paddingLeft="@dimen/dimen_12dp"
        android:paddingRight="@dimen/dimen_12dp"
        android:text="@string/wallet_name_hint" />

    <Button
        android:id="@+id/bt_next"
        style="@style/public_circle_button_style"
        android:layout_width="@dimen/dimen_150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dimen_40dp"
        android:text="@string/next_step" />

</LinearLayout>