<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/screen_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_46dp"
        android:src="@mipmap/safegem_logo" />

    <Button
        android:id="@+id/btn_new_wallet"
        style="@style/public_circle_button_style"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dimen_46dp"
        android:layout_marginRight="@dimen/dimen_46dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:text="@string/create_wallet"
        android:textSize="@dimen/font_14sp" />

    <Button
        android:id="@+id/btn_backup_wallet"
        style="@style/public_circle_button_style"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dimen_46dp"
        android:layout_marginRight="@dimen/dimen_46dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/restore_wallet"
        android:textSize="@dimen/font_14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableLeft="@drawable/prot_check_box_selector"
            android:paddingBottom="@dimen/dimen_16dp"
            android:paddingLeft="@dimen/dimen_16dp"
            android:paddingRight="@dimen/dimen_10dp"
            android:paddingTop="@dimen/dimen_16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree_hint"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_4dp"
            android:text="@string/agree_content"
            android:textColor="@color/orange" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_20dp"
        android:text="@string/add_wallet_hint"
        android:textColor="@color/orange"
        android:textSize="@dimen/font_12sp" />
</LinearLayout>
