<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dimen_20dp">

    <TextView
        android:id="@+id/tv_max_fee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:text="@string/max_fee"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/eth_gas_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/eth_gas_price"
            android:inputType="number"
            android:maxLength="10"
            android:textColor="@color/text_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="gwei" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/dimen_4dp"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/eth_gas_limit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/eth_gas_limit"
            android:inputType="number"
            android:maxLength="10"
            android:textColor="@color/text_color" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/dimen_4dp"
        android:background="@color/line" />

    <TextView
        android:id="@+id/tv_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:padding="@dimen/dimen_4dp"
        android:text="@string/default_transaction_fee"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/bt_save"
        style="@style/public_circle_button_style"
        android:layout_width="@dimen/dimen_150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_54dp"
        android:text="@string/save" />

</LinearLayout>