<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_48dp"
            android:background="@color/white"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/dimen_20dp"
            android:paddingRight="@dimen/dimen_20dp"
            android:textSize="@dimen/font_14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:background="@color/public_background" />

        <EditText
            android:id="@+id/et_password2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_48dp"
            android:background="@color/white"
            android:hint="@string/hint_password2"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/dimen_20dp"
            android:paddingRight="@dimen/dimen_20dp"
            android:textSize="@dimen/font_14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/public_background" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/dimen_22dp"
        android:layout_marginRight="@dimen/dimen_22dp"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:layout_weight="1"
        android:text="@string/password_rule"
        android:textSize="@dimen/font_12sp" />

    <Button
        android:id="@+id/bt_confirm"
        style="@style/public_circle_button_style"
        android:layout_width="@dimen/dimen_150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dimen_40dp"
        android:text="@string/next_step" />

</LinearLayout>