<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        style="@style/title_text_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/font_18sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@color/white"
        android:maxLength="32"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:hint="@string/hint_input_password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/dimen_12dp"
        android:paddingRight="@dimen/dimen_12dp"
        android:textSize="@dimen/font_14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line" />


    <Button
        android:id="@+id/bt_confirm"
        style="@style/public_circle_button_style"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/dimen_36dp"
        android:layout_marginRight="@dimen/dimen_36dp"
        android:layout_marginTop="@dimen/dimen_36dp"
        android:text="@string/confirm" />

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:padding="@dimen/dimen_4dp"
        android:text="@string/forget_password_link"
        android:textColor="@color/colorPrimary" />

</LinearLayout>