<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/screen_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dimen_12dp"
        android:layout_marginRight="@dimen/dimen_12dp"
        android:layout_marginTop="@dimen/dimen_52dp"
        android:text="@string/gesture_error_count"
        android:textColor="@color/text_color_red"
        android:textSize="@dimen/font_16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dimen_12dp"
        android:layout_marginRight="@dimen/dimen_12dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:text="@string/gesture_error_hint"
        android:textColor="@color/colorPrimary" />

    <com.andrognito.patternlockview.PatternLockView
        android:id="@+id/plv_gesture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:aspectRatio="square"
        app:aspectRatioEnabled="true"
        app:correctStateColor="@color/public_gray"
        app:dotAnimationDuration="200"
        app:dotCount="3"
        app:dotNormalSize="@dimen/dimen_12dp"
        app:dotSelectedSize="@dimen/dimen_24dp"
        app:normalStateColor="@color/colorPrimary"
        app:pathEndAnimationDuration="100"
        app:pathWidth="@dimen/dimen_4dp"
        app:wrongStateColor="@color/pomegranate" />

    <TextView
        android:id="@+id/tv_to_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/password_unlock"
        android:textColor="@color/text_color_blue" />

</LinearLayout>