<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dimen_14dp"
            android:paddingLeft="@dimen/dimen_20dp"
            android:paddingRight="@dimen/dimen_20dp"
            android:paddingTop="@dimen/dimen_14dp">

            <TextView
                android:id="@+id/tv_pay_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_to"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dimen_14dp"
            android:paddingLeft="@dimen/dimen_20dp"
            android:paddingRight="@dimen/dimen_20dp"
            android:paddingTop="@dimen/dimen_14dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_amount"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_pay_amount"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/dimen_4dp"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dimen_14dp"
            android:paddingLeft="@dimen/dimen_20dp"
            android:paddingRight="@dimen/dimen_20dp"
            android:paddingTop="@dimen/dimen_14dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remark"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_memo"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/dimen_4dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:id="@+id/bt_confirm"
            style="@style/public_circle_button_style"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/dimen_40dp"
            android:layout_marginRight="@dimen/dimen_40dp"
            android:layout_marginTop="@dimen/dimen_80dp"
            android:text="@string/confirm" />

    </LinearLayout>

</ScrollView>